# veritas

./: .gitignore  Cargo.toml  MAINTENANCE.MD  MANIFEST.md  README.md  build.rs  imports.json  references.md
.github/ISSUE_TEMPLATE/: enhancements.md
.github/workflows/: CI.yml  artifact_cache.yml  codeql.yml  publish.yml
docs/: API.md
locales/: TODO.yml  v2.yml
scripts/: publish.py  publish_hotfix.py  publish_major.py  publish_minor.py  publish_rev.py  requirements.txt
src/: battle.rs  directx.rs  entry.rs  globals.rs  hooks.rs  kreide.rs  lib.rs  logging.rs  overlay.rs  packets.rs  prelude.rs  server.rs  sr.rs  subscribers.rs  ui.rs  updater.rs
src/hooks/: battle.rs  directx.rs
src/kreide/: functions.rs  helpers.rs  il2cpp.rs  native_types.rs  prelude.rs  statics.rs  types.rs
src/kreide/il2cpp/: api.rs  misc.rs  native.rs  util.rs
src/models/: events.rs  misc.rs  packets.rs
src/server/: socket_manager.rs
src/sr/: functions.rs  globals.rs  helpers.rs  il2cpp_types.rs  offsets.rs  statics.rs  types.rs
src/subscribers/: battle.rs  directx.rs
src/ui/: app.rs  config.rs  themes.rs  widgets.rs
src/ui/core/: helpers.rs
