[package]
name = "veritas"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/hessiser/veritas/"

[package.metadata]
region = "cn"
is_beta = true
patch = "3.2.5"
hotfix = "0.1"

[package.metadata.i18n]
available-locales = ["en", "fr", "es", "de", "it", "ja", "pt", "nl", "ru", "vi", "zh", "pl"]
default-locale = "en"
load-path = "locales"
minify-key = true
minify-key-len = 12
minify-key-thresh = 8

[lib]
crate-type = ["cdylib"]

[dependencies]
# UI
egui = "0.31.1"
egui_plot = "0.32.1"
edio11 = { git = "https://github.com/hessiser/edio11-rs.git", rev = "c9f509f" }

# Logging
log = "0.4"
slog = "2.7.0"
slog-term = "2.9.1"
egui_logger = "0.6.3"

# Server
axum = { version = "0.8.4" }
axum-server = "0.7.2"
socketioxide = "0.17.0"
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.3", features = ["cors"] }

# Misc
retour = { version = "0.3", features = ["static-detour"] }
ctor = "0.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.97"
function_name = "0.3.0"
rust-i18n = "3.1.4"
phf = { version = "0.11.3", features = ["macros"] }
directories = "6.0.0"
paste = "1.0.15"

[dependencies.windows]
version = "0.60.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_UI_Input_KeyboardAndMouse"
]

[build-dependencies]
cargo_metadata = "0.19.2"
regex = "1.11.1"
toml_edit = "0.22.25"
winres = "0.1.12"
