[package]
name = "veritas"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/hessiser/veritas/"
version = "0.2.3"

[package.metadata.i18n]
available-locales = ["en", "fr", "es", "de", "it", "ja", "pt", "nl", "ru", "vi", "zh", "pl"]
default-locale = "en"
load-path = "locales"
minify-key = true
minify-key-len = 12
minify-key-thresh = 8

[lib]
crate-type = ["cdylib"]

[dependencies]
# UI
egui = { version = "0.32.0", features = ["serde"] }
egui_plot = "0.33.0"
edio11 = { git = "https://github.com/hessiser/edio11-rs.git", rev = "e9a1f8c" }
egui-phosphor = { version = "0.10.0", features = ["bold"]}
egui_colors = { version = "0.9.0", features = ["serde"] }
egui-notify = "0.20.0"

# Logging
log = "0.4"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.9.1"
egui_logger = "0.8.0"

# Server
axum = { version = "0.8.4" }
axum-server = "0.7.2"
socketioxide = "0.17.2"
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }

# Misc
retour = { version = "0.3", features = ["static-detour"] }
ctor = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
anyhow = "1.0.98"
function_name = "0.3.0"
rust-i18n = "3.1.5"
phf = { version = "0.12.1", features = ["macros"] }
directories = "6.0.0"
paste = "1.0.15"
patternscan = "1.2.0"
microseh = "1.1.2"
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
rfd = "0.15.4"
semver = "1.0.26"
indoc = "2.0.6"
widestring = "1.2.0"

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_ProcessStatus",
]

[build-dependencies]
winres = "0.1.12"
